<resources>
    <string name="app_name">Copyrightly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate App</string>
    <string name="app_email" translatable="false">copyrightly@gmail.com</string>
    <string name="app_creator" translatable="false">Created by: Baltic Information Technologies for Copyrightly app</string>
    <string name="app_version" translatable="false">( Version %1$s )</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="GOOGLE_WEB_CLIENT_ID_TOKEN">831946465997-fudemm5igmf4fkalctb1a981ploe47mq.apps.googleusercontent.com</string>
    <string name="email_subject">Suggestion to improve App</string>
    <string name="email_body">Enter your message here</string>
    <string name="email_chooser_title">Send Email</string>
    <string name="learn_topic_types">Types</string>
    <string name="learn_topic_laws">Laws</string>
    <string name="learn_topic_material">Material</string>
    <string name="login_empty_email">Please enter your Email</string>
    <string name="login_invalid_email">Please enter a valid Email</string>
    <string name="login_empty_password">Please enter your Password</string>
    <string name="login_email_not_exist">Provided Email is not registered</string>
    <string name="login_invalid_password">Password is invalid</string>
    <string name="login_email_already_used">Email address is already in use</string>
    <string name="login_try_again">Please try again</string>
    <string name="login_some_error">Some error has occurred. Try again</string>
    <string name="login_short_password">Please enter at lest 6 characters Password</string>
    <string name="register_empty_email">Please enter your Email</string>
    <string name="register_invalid_email">Please enter a valid Email</string>
    <string name="register_empty_password">Please enter your Password</string>
    <string name="register_short_password">Please enter at lest 6 characters Password</string>
    <string name="register_no_photo">Please add your Photo</string>
    <string name="register_empty_name">Please enter your Name</string>
    <string name="register_short_name">Please enter at lest 2 characters Name</string>
    <string name="register_empty_surname">Please enter your Surname</string>
    <string name="register_short_surname">Please enter at lest 2 characters Surname</string>
    <string name="register_empty_birth_date">Please enter your Date of Birth</string>
    <string name="register_upload_error">Upload failed. Please try again</string>
    <string name="register_email_already_used">Email address is already used</string>
    <string name="register_try_again">Please try again</string>
    <string name="register_some_error">Some error occurred. Try again</string>
    <string name="drawer_header_bg_image">Background image</string>
    <string name="drawer_header_user_photo">User photo</string>
    <string name="drawer_header_user_name">Copyrightly</string>
    <string name="drawer_header_user_email">Protecting your copyrights</string>
    <string name="menu_home">Home</string>
    <string name="menu_complain">Complain</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About App</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_complaint_from">Complaint Form</string>
    <string name="fragment_about_about_text">About</string>
    <string name="fragment_about_app_functions">Do you want to learn more about app purpose?</string>
    <string name="fragment_about_have_suggestions">Do you have any questions, suggestions, found bugs, or you want to help test or translate? Write us a message.</string>
    <string name="fragment_about_enjoyed_app">If you enjoyed this application, please rate it. Thank you.</string>
    <string name="fragment_about_app_icon">App icon</string>
    <string name="fragment_about_email_icon">Email icon</string>
    <string name="fragment_about_google_icon">Google icon</string>
    <string name="fragment_about_send_icon">Send icon</string>
    <string name="fragment_about_terms_title">Terms of Service:</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_add_photo">Add Photo</string>
    <string name="fragment_register_name">Name</string>
    <string name="fragment_register_surname">Surname</string>
    <string name="fragment_register_gender">Your gender:</string>
    <string name="fragment_register_male">Male</string>
    <string name="fragment_register_female">Female</string>
    <string name="fragment_register_not_specified">Not specified</string>
    <string name="fragment_register_date_of_birth">Date of Birth:</string>
    <string name="fragment_register_d_m_y">Day Month Year</string>
    <string name="fragment_register_terms">Proceeding register you agree with <b>Terms of Service</b></string>
    <string name="fragment_register_register">Register</string>
</resources>