<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="eu.balticit.copyrightly.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_complain"
        android:name="eu.balticit.copyrightly.ui.ComplainFragment"
        android:label="@string/menu_complain"
        tools:layout="@layout/fragment_complain" />

    <fragment
        android:id="@+id/nav_learn"
        android:name="eu.balticit.copyrightly.ui.LearnFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_learn_pager" >
        <action
            android:id="@+id/action_nav_learn_to_nav_type_details"
            app:destination="@id/nav_type_details" />
        <action
            android:id="@+id/action_nav_learn_to_nav_law_details"
            app:destination="@id/nav_law_details" />
        <action
            android:id="@+id/action_nav_learn_to_nav_material_details"
            app:destination="@id/nav_material_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_types"
        android:name="eu.balticit.copyrightly.ui.TypesFragment"
        android:label="Types"
        tools:layout="@layout/fragment_types" />

    <fragment
        android:id="@+id/nav_type_details"
        android:name="eu.balticit.copyrightly.ui.TypeDetailsFragment"
        android:label="Type Details"
        tools:layout="@layout/fragment_type_details" >
        <argument
            android:name="typeId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_laws"
        android:name="eu.balticit.copyrightly.ui.LawsFragment"
        android:label="Laws"
        tools:layout="@layout/fragment_laws" />

    <fragment
        android:id="@+id/nav_law_details"
        android:name="eu.balticit.copyrightly.ui.LawDetailsFragment"
        android:label="Law Details"
        tools:layout="@layout/fragment_law_details" >
        <argument
            android:name="lawId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_materials"
        android:name="eu.balticit.copyrightly.ui.MaterialsFragment"
        android:label="Materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/nav_material_details"
        android:name="eu.balticit.copyrightly.ui.MaterialDetailsFragment"
        android:label="Material Details"
        tools:layout="@layout/fragment_material_details" >
        <argument
            android:name="materialId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="eu.balticit.copyrightly.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_about"
        android:name="eu.balticit.copyrightly.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_login"
        android:name="eu.balticit.copyrightly.ui.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="eu.balticit.copyrightly.ui.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_about"
            app:destination="@id/nav_about"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
</navigation>